tests/fails/arith4.t
import "compiler/liszt"
mesh = L.initMeshRelationsFromFile("examples/mesh.lmesh")

local t = {}
local r = {}
local vk = liszt_kernel(v in mesh.vertices)
    var x = r < t
end
vk()